# wlcppgen

./: .gitignore  COPYING  README.md  wlcppgen.py
sample/: CMakeLists.txt  Doxyfile.in  display.cpp  display.hpp  event_queue.cpp  event_queue.hpp  generate.sh  main.cpp  proxy.cpp  proxy.hpp  wlcpp.cpp  wlcpp.hpp
sample/cmake/: FindWaylandClient.cmake
sample/template/: display.patch  wlcpp.cpp.in  wlcpp.hpp.in
